methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:22: error: not found: value avancer
  avancer(2)
  ^